# pythonvilag-website

./: .cpanel.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Procfile  README.md  compose.yml  gunicorn_config.py  passenger_wsgi.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  tox.ini
.do/: deploy.template.yaml
.github/workflows/: ci.yml  deploy.yaml  deploy.yml  ghcr.yml  main.yaml  main.yml
src/: run.py
src/pythonvilag_website/: __init__.py  forms.py  models.py  routes.py  site.db
src/pythonvilag_website/modules/checkmark/: routes.py
src/pythonvilag_website/modules/private_lecture_automation/: forms.py  routes.py
src/pythonvilag_website/static/css/: accordion.css  assessment.css  base.css  footer.css  navigation.css  post.css
src/pythonvilag_website/templates/errors/: 400.html  403.html  404.html  500.html
src/pythonvilag_website/templates/modules/checkmark/: assessment_results.html  submit_assessment.html
src/pythonvilag_website/templates/modules/private_lecture_automation/: private_lecture.html
src/pythonvilag_website/templates/post/extra/: extra.html
src/pythonvilag_website/templates/post/project/: project.html
src/pythonvilag_website/templates/post/project/check_mark/: assessment_results.html  submit_assessment.html
src/pythonvilag_website/templates/post/project/checkmark/: submit_assessment.html
src/pythonvilag_website/templates/post/project/private_lecture_automation/: private_lecture.html
src/pythonvilag_website/templates/post/python/: python.html
src/pythonvilag_website/templates/post/python/python_alapjai/: 00_Bevezetes_es_kurzusinformaciok.html  01_A_Python_programozasi_nyelvrol.html  02_Valtozok_tipusok_es_muveleteik.html  03_Komment_kiiras_bekeres.html  04_Lista_es_dictionary.html  python_alapjai.html
src/pythonvilag_website/templates/site/: assessment.html  base.html  category.html  faq.html  footer.html  giscus.html  home.html  mentors.html  navigation.html  subcategory.html
src/pythonvilag_website/templates/source/: assessment.html  base.html  category.html  footer.html  navigation.html  subcategory.html
tests/: conftest.py  db_setup.py  routes_test.py
