# Build System
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project Metadata
[project]
name = "pythonvilag-website"
version = "1.0.1"
description = "Source code that powers the Python Világ website."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Mizsak", email = "info@pythonvilag.hu" }]
keywords = ["website", "tutorial", "flask", "pythonvilag"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.1",
    "Flask==3.0.2",
    "gunicorn==21.2.0",
    "itsdangerous==2.1.2",
    "python-dotenv==1.0.1",
    "SQLAlchemy==2.0.27",
    "Werkzeug==3.0.1",
    # Self maintained
    # "private-lecture-automation==0.2.0",
    # "checkmark==0.1.0",
]
[project.optional-dependencies]
dev = ["mypy", "pre-commit", "pytest-cov", "pytest", "ruff", "tox"]
[project.urls]
Repository = "https://github.com/PythonVilag/pythonvilag-website/"
Homepage = "https://pythonvilag.hu/"

# Tools
# MyPy
[tool.mypy]
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_context = true
strict = true
warn_unreachable = true
warn_unused_ignores = true

# Pytest
[tool.pytest.ini_options]
addopts = "--cov=pythonvilag_website --cov=tests --cov-config=pyproject.toml --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = ["tests"]
